# interface-types

./: Cargo.toml  README.md
.github/workflows/: test.yml
crates/it-types/: Cargo.toml
crates/it-types/src/: lib.rs  ne_vec.rs  types.rs  values.rs  vec1.rs
crates/it-types/src/impls/: errors.rs  mod.rs  types.rs  values.rs
crates/to-bytes/: Cargo.toml
crates/to-bytes/src/: lib.rs
src/: ast.rs  errors.rs  lib.rs  types.rs  values.rs  vec1.rs
src/decoders/: binary.rs  wat.rs
src/encoders/: binary.rs  wat.rs
src/interpreter/: mod.rs
src/interpreter/instructions/: argument_get.rs  arrays.rs  byte_arrays.rs  call_core.rs  dup.rs  mod.rs  numbers.rs  records.rs  strings.rs  swap2.rs  utils.rs
src/interpreter/instructions/records/: utils.rs
src/interpreter/wasm/: structures.rs
src/serde/: de.rs  ser.rs
tests/: binary.rs
wasmer-it/: Cargo.toml
wasmer-it/src/: ast.rs  errors.rs  lib.rs  macros.rs  values.rs
wasmer-it/src/decoders/: binary.rs  wat.rs
wasmer-it/src/encoders/: binary.rs  wat.rs
wasmer-it/src/interpreter/: mod.rs
wasmer-it/src/interpreter/instructions/: argument_get.rs  arrays.rs  call_core.rs  dup.rs  mod.rs  numbers.rs  records.rs  strings.rs  utils.rs
wasmer-it/src/interpreter/wasm/: structures.rs
wasmer-it/src/serde/: de.rs  ser.rs
